[ENH] purchase_invoice_plan_deposit: multi deposit in invoice plan

--- a/purchase_invoice_plan_deposit/wizard/purchase_create_invoice_plan_view.xml
+++ b/purchase_invoice_plan_deposit/wizard/purchase_create_invoice_plan_view.xml
@@ -22,6 +22,10 @@
                         attrs="{'invisible': [('advance', '=', False)]}"
                     >%</span>
                 </div>
+                <field
+                    name="num_advance"
+                    attrs="{'invisible': [('advance', '=', False)]}"
+                />
             </label>
         </field>
     </record>
