--- a/subcontracted_service/views/product_template.xml
+++ b/subcontracted_service/views/product_template.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
     <record id="product_template_subcontracted_service_view_form" model="ir.ui.view">
@@ -6,7 +6,7 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='type']" position="after">
+            <xpath expr="//field[@name='detailed_type']" position="after">
                 <field
                     name="property_subcontracted_service"
                     attrs="{'invisible': [('type', '!=', 'service')]}"
