--- a/purchase_order_archive/views/purchase_order.xml
+++ b/purchase_order_archive/views/purchase_order.xml
@@ -7,7 +7,12 @@
         <field name="inherit_id" ref="purchase.purchase_order_form" />
         <field name="arch" type="xml">
             <xpath expr="//div[@name='button_box']" position="after">
-                <widget name="web_ribbon" title="Archived" bg_color="bg-danger" attrs="{'invisible': [('active', '=', True)]}"/>
+                <widget
+                    name="web_ribbon"
+                    title="Archived"
+                    bg_color="bg-danger"
+                    attrs="{'invisible': [('active', '=', True)]}"
+                />
             </xpath>
             <xpath expr="//sheet">
                 <field name="active" invisible="1" />
@@ -20,7 +25,11 @@
         <field name="arch" type="xml">
             <xpath expr="//search" position="inside">
                 <separator />
-                <filter string="Archived" name="inactive" domain="[('active','=',False)]"/>
+                <filter
+                    string="Archived"
+                    name="inactive"
+                    domain="[('active','=',False)]"
+                />
             </xpath>
         </field>
     </record>
