[15.0][IMP] purchase_order_line_menu: added invoice line in tree view
Co-authored-by: Rafael Blasco <8736623+rafaelbn@users.noreply.github.com>

--- a/purchase_order_line_menu/views/purchase_order_line_views.xml
+++ b/purchase_order_line_menu/views/purchase_order_line_views.xml
@@ -55,6 +55,14 @@
             <xpath expr="//field[@name='date_planned']" position="attributes">
                 <attribute name="optional">hide</attribute>
             </xpath>
+            <xpath expr="/tree" postion="inside">
+                <field
+                    name="invoice_lines"
+                    widget="many2many_tags"
+                    groups="account.group_account_invoice"
+                    optional="hide"
+                />
+            </xpath>
         </field>
     </record>
 
