--- a/purchase_blanket_order/views/purchase_blanket_order_views.xml
+++ b/purchase_blanket_order/views/purchase_blanket_order_views.xml
@@ -163,6 +163,48 @@
                                     />
                                     <field name="price_subtotal" widget="monetary" />
                                 </tree>
+                                <form>
+                                    <field name="name" invisible="1" />
+                                    <group>
+                                        <group>
+                                            <field name="product_id" />
+
+                                            <field name="original_uom_qty" />
+                                            <field
+                                                name="product_uom"
+                                                groups="uom.group_uom"
+                                            />
+                                            <field name="price_unit" />
+                                            <field
+                                                name="taxes_id"
+                                                widget="many2many_tags"
+                                                domain="[('type_tax_use','=','purchase')]"
+                                                context="{'default_type_tax_use': 'purchase'}"
+                                                options="{'no_create': True}"
+                                            />
+                                        </group>
+                                        <group>
+                                            <field name="date_schedule" />
+                                            <field name="ordered_uom_qty" />
+                                            <field name="invoiced_uom_qty" />
+                                            <field name="remaining_uom_qty" />
+                                        </group>
+                                    </group>
+                                    <group>
+                                        <field
+                                            name="price_subtotal"
+                                            widget="monetary"
+                                        />
+                                    </group>
+                                    <notebook>
+                                        <page
+                                            string="Purchase Order Lines"
+                                            name="purchase_order_lines"
+                                        >
+                                            <field name="purchase_lines" />
+                                        </page>
+                                    </notebook>
+                                </form>
                             </field>
                             <group class="oe_subtotal_footer oe_right">
                                 <field
@@ -259,12 +301,12 @@
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">
                 Click to create a blanket order that can be converted into a purchase order.
-              </p>
+            </p>
             <p>
                 Use this menu to search within your blanket orders. For each blanket order,
                 you can track the related discussion with the vendor, control
                 the products received and control the vendor bills.
-              </p>
+            </p>
         </field>
     </record>
     <record id="purchase_blanket_order_line_tree" model="ir.ui.view">
