--- a/purchase_rfq_number/reports/purchase_report_templates.xml
+++ b/purchase_rfq_number/reports/purchase_report_templates.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-
     <template
         id="report_purchasequotation_document"
         inherit_id="purchase.report_purchasequotation_document"
+        priority="999"
     >
-        <!-- pylint:disable=dangerous-qweb-replace-wo-priority -->
         <xpath expr="//span[@t-field='o.name']" position="replace">
             <t t-if="o.rfq_number != 'New'">
                 <span t-field="o.rfq_number" />
@@ -15,5 +14,4 @@
             </t>
         </xpath>
     </template>
-
 </odoo>
