[IMP] purchase_allowed_product: global setting and access rights

--- a/purchase_allowed_product/views/purchase_order_view.xml
+++ b/purchase_allowed_product/views/purchase_order_view.xml
@@ -8,11 +8,13 @@
                 <field
                     name="use_only_supplied_product"
                     attrs="{'invisible': [('state', 'not in', ('draft', 'sent'))]}"
+                    groups="!purchase_allowed_product.group_purchase_hide_allowed_product_option"
                     class="oe_edit_only"
                 />
                 <label
                     for="use_only_supplied_product"
                     attrs="{'invisible': [('state', 'not in', ('draft', 'sent'))]}"
+                    groups="!purchase_allowed_product.group_purchase_hide_allowed_product_option"
                     class="oe_edit_only"
                 />
             </field>
