purchase_manual_add_supplierinfo: hack to be able to do an action without saving
For end user point of view, it great to have a button to confirm or skip
Sadly Odoo will save and then do the action.
A possibility will to unlink after saving, but this will create useless data
that can trigger recompute, job...
So the only solution is to hack the save so it do nothing and then save after
by calling the button "confirm"

--- a/purchase_manual_add_supplierinfo/views/product.xml
+++ b/purchase_manual_add_supplierinfo/views/product.xml
@@ -3,35 +3,27 @@
         <field name="model">product.supplierinfo</field>
         <field name="inherit_id" ref="product.product_supplierinfo_form_view" />
         <field name="arch" type="xml">
-            <xpath expr="//sheet/group[1]" position="after">
-                <group invisible="not context.get('update_from_po_id', False)">
-                    <label for="ignore_create_from_po" />
-                    <div>
-                        <field name="ignore_create_from_po" />
-                    </div>
-                </group>
-            </xpath>
             <xpath expr="//sheet" position="after">
                 <footer
-                    invisible="not context.get('update_from_po_id', False) and not context.get('update_from_po_line_id', False)"
+                    invisible="not context.get('update_from_po_id') and not context.get('update_from_po_line_id')"
                 >
                     <button
                         name="update_from_purchase"
                         string="Confirm"
                         type="object"
                         class="btn-primary"
-                        invisible="not context.get('update_from_po_id', False)"
                     />
                     <button
-                        string="Confirm"
+                        name="update_from_purchase_skip"
+                        string="Ignore"
+                        type="object"
                         class="btn-primary"
-                        special="save"
-                        invisible="not context.get('update_from_po_line_id', False)"
                     />
                     <button
                         name="cancel"
                         string="Cancel"
                         class="btn-secondary"
+                        type="object"
                         special="cancel"
                     />
                 </footer>
