--- a/purchase_work_acceptance/views/work_acceptance_views.xml
+++ b/purchase_work_acceptance/views/work_acceptance_views.xml
@@ -72,7 +72,12 @@
                                 attrs="{'readonly': [('state', '!=', 'draft')]}"
                             >
                                 <tree editable="bottom">
-                                    <field name="purchase_line_id" invisible="1" />
+                                    <field
+                                        name="purchase_line_id"
+                                        optional="hide"
+                                        readonly="1"
+                                        force_save="1"
+                                    />
                                     <field
                                         name="product_id"
                                         readonly="1"
@@ -92,6 +97,7 @@
                                     <sheet>
                                         <group>
                                             <group>
+                                                <field name="purchase_line_id" />
                                                 <field name="product_id" />
                                                 <label for="product_qty" />
                                                 <div>
@@ -104,7 +110,6 @@
                                                     >&#160;</span>
                                                     <field
                                                         name="product_uom"
-                                                        groups="uom.group_uom"
                                                         class="oe_inline"
                                                     />
                                                 </div>
