[MIG] purchase_force_invoiced: Migration to 17.0

--- a/purchase_force_invoiced/view/purchase_order.xml
+++ b/purchase_force_invoiced/view/purchase_order.xml
@@ -12,7 +12,8 @@
                 <field
                     name="force_invoiced"
                     groups="purchase.group_purchase_manager"
-                    attrs="{'invisible': [('state', 'not in', ('purchase', 'done'))]}"
+                    invisible="state not in ('purchase', 'done')"
+                    readonly="state == 'done'"
                     widget="boolean_toggle"
                 />
             </field>
