[17.0][MIG] purchase_deposit

--- a/purchase_deposit/wizard/purchase_make_invoice_advance_views.xml
+++ b/purchase_deposit/wizard/purchase_make_invoice_advance_views.xml
@@ -24,21 +24,21 @@
                     <div>
                         <field name="amount" class="oe_inline" widget="monetary" />
                         <span
-                            attrs="{'invisible': [('advance_payment_method', '!=', 'percentage')]}"
                             class="oe_inline"
+                            invisible="advance_payment_method != 'percentage'"
                         >%</span>
                     </div>
                     <field
                         name="deposit_account_id"
                         class="oe_inline"
-                        attrs="{'invisible': [('purchase_deposit_product_id', '!=', False)]}"
+                        invisible="not purchase_deposit_product_id"
                     />
                     <field
                         name="deposit_taxes_id"
                         class="oe_inline"
                         widget="many2many_tags"
                         domain="[('type_tax_use','=','purchase')]"
-                        attrs="{'invisible': [('purchase_deposit_product_id', '!=', False)]}"
+                        invisible="not purchase_deposit_product_id"
                     />
                 </group>
                 <footer>
